--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.30"
 tokio = { version = "1.36.0", features = [
     "macros",
     "rt-multi-thread",
     "net",
     "io-util",
 ] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
 types = { path = "./types" }
 
 [workspace]
