--- a/player/Cargo.toml
+++ b/player/Cargo.toml
@@ -13,3 +13,5 @@ tokio = { version = "1.36.0", features = [
     "net",
     "io-util",
 ] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
+futures = "0.3.30"
