--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -10,3 +10,4 @@ base64 = "0.22.0"
 bincode = "1.3.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_with = { version = "3.7.0", features = ["base64"] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
