--- a/player/Cargo.toml
+++ b/player/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.36.0", features = [
 tokio-util = { version = "0.7.10", features = ["codec"] }
 futures = "0.3.30"
 rand = "0.8.5"
+clap = { version = "4.5.3", features = ["derive"] }
